<resources>
    <string name="app_name">Playlist Maker</string>

    <string name="poisk">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="nas">Настройки</string>
    <string name="black_tm">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="share_message">Лучший курс по Android Разработке: https://practicum.yandex.ru/android-developer/</string>
    <string name="account">roman.roschin2014@yandex.ru</string>
    <string name="subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="thanks_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="email">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_name">Поиск</string>
    <string name="no_track">Ничего не нашлось</string>
    <string name="no_internet">Проблемы со связью</string>
    <string name="no_loading">Загрузка не удалась.Проверьте\nподключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="empty_media">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="no_single_playlist">Вы не создали\nни одного плейлиста</string>

    <string name="time_track">Длительность</string>
    <string name="album_track">Альбом</string>
    <string name="year_track">Год</string>
    <string name="genre_track">Жанр</string>
    <string name="country_track">Страна</string>
    <string name="test">Тест</string>
    <string name="back_text">Назад</string>

    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create">Создать</string>
    <string name="finish_it_playlist">Завершить создание плейлиста?</string>
    <string name="warning">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отменить</string>
    <string name="add_in_playlist">Добавить в плейлист</string>

    <string name="impart">Поделиться</string>
    <string name="delete_pl">Удалить плейлист</string>
    <string name="edit">Редактировать информацию</string>
    <string name="no_track_pl">В этом плейлисте нет треков</string>

    <string name="added">Добавлено</string>
    <string name="add_in_pl_to">Добавлено в плейлист</string>
    <string name="been_added">Трек уже добавлен в плейлист</string>
    <string name="edit2">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="finish_creating_playlist">Завершить создание плейлиста?</string>
    <string name="al_unsaved_data">Все несохраненные данные будут потеряны</string>
    <string name="playlist">Плейлист</string>
    <string name="cancel2">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="sgaring_track">Поделиться плейлистом</string>
    <string name="no_track_sharing">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="delete_this_track_from_the_playlist">Вы уверены, что хотите удалить этот трек из плейлиста?</string>
    <string name="playlist_created2">Плейлист %1$s создан</string>
    <string name="delete_playlist_message">Хотите удалить плейлист «%1$s»?</string>
    <string name="delete_track_title">Удалить трек</string>
    <string name="delete_playlist_title">Удалить плейлист</string>




</resources>