<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearLayout"

    tools:context=".setting.ui.fragment.SettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sixteen_dp"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/sixteen_dp"
            android:text="@string/nas"
            android:textColor="@color/black_white"
            android:textFontWeight="500"
            android:textSize="22sp"


            />

    </LinearLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty_four_dp"

        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/sixteen_dp"
        android:paddingVertical="20dp"
        android:text="@string/black_tm"
        android:textSize="16sp"
        app:thumbTint="@color/switch_thumb_color"
        app:trackTint="@color/switch_track_color"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/share"
        style="@style/ButtonStyleSetting"
        android:drawableEnd="@drawable/comm"
        android:text="@string/share"


        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/support"
        style="@style/ButtonStyleSetting"
        android:drawableEnd="@drawable/tell"
        android:text="@string/support" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/consent"
        style="@style/ButtonStyleSetting"
        android:drawableEnd="@drawable/go"
        android:text="@string/agreement" />


</LinearLayout>


