<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearLayout"

    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="@dimen/twenty_four_dp"
            android:layout_height="@dimen/twenty_four_dp"
            android:layout_marginStart="@dimen/sixteen_dp"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/back"
            />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/sixteen_dp"
            android:text="@string/nas"
            android:textColor="?attr/colorOnSecondary"
            android:textFontWeight="500"
            android:textSize="22sp"
            android:theme="@style/Theme.MyPlMaker"

            />

    </LinearLayout>

    <Switch

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty_four_dp"
        android:checked="false"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/sixteen_dp"
        android:paddingVertical="20dp"
        android:switchMinWidth="56dp"
        android:text="@string/black_tm"
        android:textSize="16sp"
        android:thumbTint="@color/switch_thumb_color"
        android:trackTint="@color/switch_track_color"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/ButtonStyleSetting"
        android:id="@+id/share"
        android:drawableEnd="@drawable/comm"
        android:text="@string/share"


        />

    <com.google.android.material.textview.MaterialTextView
        style="@style/ButtonStyleSetting"
        android:id="@+id/support"
        android:drawableEnd="@drawable/tell"
        android:text="@string/support"
        />

    <com.google.android.material.textview.MaterialTextView
        style="@style/ButtonStyleSetting"
        android:id="@+id/consent"
        android:drawableEnd="@drawable/go"
        android:text="@string/agreement"
        />


</LinearLayout>


