<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    style="@style/LinearLayout"

    >

    <com.google.android.material.button.MaterialButton
        android:id="@+id/update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/twenty_four_dp"
        android:backgroundTint="@color/color_FF_B22"
        android:paddingHorizontal="@dimen/sixteen_dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/new_playlist"
        android:textAllCaps="false"
        android:textColor="@color/color_B22_FF"
        android:layout_marginBottom="@dimen/for48"
        app:cornerRadius="@dimen/fifty_six_56dp" />

    <ImageView android:id="@+id/status_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/no_track"
        android:src="@drawable/no_track"/>

    <TextView android:id="@+id/favourite_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/no_single_playlist"
        style="@style/TextNoInternet"/>

</LinearLayout>