<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/blue"

        >


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="28dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:text="@string/poisk"
                android:textColor="@color/black_text"
                android:textSize="22sp"
                app:cornerRadius="16dp"
                app:icon="@drawable/look"
                app:iconGravity="textStart"
                app:iconPadding="1dp"
                app:iconTint="@color/black_text"

                />

            <Button
                android:id="@+id/mmedia"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:backgroundTint="@color/white"
                android:text="@string/media"
                android:textColor="@color/black_text"
                android:layout_gravity="center"
                android:textSize="22sp"
                android:layout_marginBottom="16dp"
                app:icon="@drawable/media"
                app:iconGravity="textStart"
                app:iconTint="@color/black_text"
                app:iconPadding="1dp"
                app:cornerRadius="16dp"
                />
            <Button
                android:id="@+id/settings"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:backgroundTint="@color/white"
                android:text="@string/nas"
                android:textColor="@color/black_text"
                android:layout_gravity="center"
                android:textSize="22sp"
                app:icon="@drawable/menu"
                app:iconGravity="textStart"
                app:iconTint="@color/black_text"
                app:iconPadding="1dp"
                app:cornerRadius="16dp"
                />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>