<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_B22_FF">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".player.ui.fragment.TitleFragment">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guidline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guidline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_imageline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.07" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_imageline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.93" />

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="@dimen/for48"
            android:layout_height="@dimen/for48"
            android:background="@null"
            android:contentDescription="@string/back_text"
            android:src="@drawable/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/trackAva"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="65dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/right_imageline"
            app:layout_constraintStart_toStartOf="@+id/left_imageline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_four_dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:textColor="@color/color_FF_B22"
            android:textSize="@dimen/twenty_two_sp"
            app:layout_constraintStart_toStartOf="@+id/trackAva"
            app:layout_constraintTop_toBottomOf="@+id/trackAva"
            tools:ignore="VisualLintBounds" />

        <TextView
            android:id="@+id/artist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eight_dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:textColor="@color/color_FF_B22"
            android:textSize="@dimen/fourteen_sp"
            app:layout_constraintStart_toStartOf="@id/trackAva"
            app:layout_constraintTop_toBottomOf="@id/title_track"
            tools:ignore="VisualLintBounds" />

        <ImageButton
            android:id="@+id/button_plus"
            android:layout_width="@dimen/fifty_six_56dp"
            android:layout_height="@dimen/fifty_six_56dp"
            android:background="@null"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@id/button_play"
            app:layout_constraintStart_toStartOf="@id/trackAva"
            app:layout_constraintTop_toTopOf="@+id/button_play"
            app:srcCompat="@drawable/addnewpl"
            tools:ignore="VisualLintBounds,ImageContrastCheck,DuplicateSpeakableTextCheck" />


        <com.example.myplmaker.player.ui.custom.PlaybackButtonView
            android:id="@+id/button_play"
            android:layout_width="@dimen/eighty_four_84dp"
            android:layout_height="@dimen/eighty_four_84dp"
            android:layout_marginTop="@dimen/twenty_eight_28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/artist_name"
            app:pauseSrc="@drawable/stop"
            app:playSrc="@drawable/play" />

        <ImageButton
            android:id="@+id/button_heart"
            android:layout_width="@dimen/fifty_six_56dp"
            android:layout_height="@dimen/fifty_six_56dp"
            android:background="@null"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@id/button_play"
            app:layout_constraintEnd_toEndOf="@id/trackAva"
            app:layout_constraintTop_toTopOf="@+id/button_play"
            app:srcCompat="@drawable/likee"
            tools:ignore="VisualLintBounds,ImageContrastCheck" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/four_dp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="@color/color_FF_B22"
            android:textSize="@dimen/fourteen_sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_play"
            tools:ignore="VisualLintBounds" />

        <TextView
            android:id="@+id/time_track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fortyn_40dp"
            android:layout_marginBottom="@dimen/sixteen_dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/time_track"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/fourteen_sp"
            app:layout_constraintBottom_toTopOf="@id/album_track"
            app:layout_constraintStart_toStartOf="@id/left_guidline"
            tools:ignore="TextContrastCheck,VisualLintBounds" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fortyn_40dp"
            android:layout_marginBottom="@dimen/sixteen_dp"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/color_FF_B22"
            android:textSize="@dimen/fourteen_sp"
            app:layout_constraintBottom_toTopOf="@id/album"
            app:layout_constraintEnd_toEndOf="@id/right_guidline"
            tools:ignore="VisualLintBounds" />

        <TextView
            android:id="@+id/album_track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eight_dp"
            android:layout_marginBottom="@dimen/sixteen_dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/album_track"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/fourteen_sp"
            app:layout_constraintBottom_toTopOf="@id/year_track"
            app:layout_constraintStart_toStartOf="@id/left_guidline"
            tools:ignore="TextContrastCheck,VisualLintBounds" />

        <TextView
            android:id="@+id/album"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sixteen_dp"
            android:layout_marginBottom="@dimen/sixteen_dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:maxLines="1"
            android:textAlignment="viewEnd"
            android:textColor="@color/color_FF_B22"
            android:textSize="@dimen/fourteen_sp"
            app:layout_constraintBottom_toTopOf="@id/year"
            app:layout_constraintEnd_toEndOf="@id/right_guidline"
            app:layout_constraintStart_toEndOf="@id/album_track"
            tools:ignore="VisualLintBounds" />

        <TextView
            android:id="@+id/year_track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sixteen_dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/year_track"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/fourteen_sp"
            app:layout_constraintBottom_toTopOf="@id/genre_track"
            app:layout_constraintStart_toStartOf="@id/left_guidline"
            tools:ignore="TextContrastCheck,VisualLintBounds" />

        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sixteen_dp"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/color_FF_B22"
            android:textSize="@dimen/fourteen_sp"
            app:layout_constraintBottom_toTopOf="@id/genre"
            app:layout_constraintEnd_toEndOf="@id/right_guidline"
            tools:ignore="VisualLintBounds" />

        <TextView
            android:id="@+id/genre_track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sixteen_dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/genre_track"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/fourteen_sp"
            app:layout_constraintBottom_toTopOf="@id/country_track"
            app:layout_constraintStart_toStartOf="@id/left_guidline"
            tools:ignore="TextContrastCheck,VisualLintBounds" />

        <TextView
            android:id="@+id/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sixteen_dp"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/color_FF_B22"
            android:textSize="@dimen/fourteen_sp"
            app:layout_constraintBottom_toTopOf="@id/country"
            app:layout_constraintEnd_toEndOf="@id/right_guidline"
            tools:ignore="VisualLintBounds" />

        <TextView
            android:id="@+id/country_track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/twenty_eight_28dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/country_track"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/fourteen_sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/left_guidline"
            tools:ignore="TextContrastCheck,VisualLintBounds" />

        <TextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/twenty_eight_28dp"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/color_FF_B22"
            android:textSize="@dimen/fourteen_sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/right_guidline"
            tools:ignore="VisualLintBounds" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.0"
        android:background="#99000000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/playlists_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_background"
        android:orientation="vertical"
        android:paddingTop="@dimen/sixteen_dp"
        app:behavior_hideable="true"
        app:behavior_peekHeight="500dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="@dimen/fifty_dp"
            android:layout_height="@dimen/for4_dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bottom_sheet_indicator" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/twenty_four_dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/add_in_playlist"
            android:textColor="@color/color_FF_B22"
            android:textSize="@dimen/nineteen_sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/new_playlist_bs_button"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/twenty_four_dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/new_playlist"
            android:textAllCaps="false"
            android:textColor="@color/color_B22_FF"
            app:backgroundTint="@color/color_FF_B22"
            app:cornerRadius="@dimen/radius_54" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlists_bs_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen_dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="4"
            tools:listitem="@layout/playlist_bottom_sheet_item" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

